added authentication for admin created config files

--- a/templates/internship_view.html
+++ b/templates/internship_view.html
@@ -70,7 +70,7 @@
                 <th>Report</th>
                 <td>
                     {% if has_report %}
-                    <a href="{{ url_for('incharge.view_feedback') }}">View</a>
+                    <a href="{{ url_for('incharge.view_report') }}">View</a>
                     {% else %}
                     <p>Not Submitted yet</p>
                     {% endif %}
