database changed to postgres

--- a/templates/incharge_dashboard.html
+++ b/templates/incharge_dashboard.html
@@ -26,8 +26,8 @@
                         <li >
                             <a href="" class="internship-types-nav">Internship Types</a>
                            <ul class="sub-menu-2">
-                               <li>In-House</li>
-                               <li>Out-House</li>
+                               <li><a href="{{ url_for('report.inhouse_report') }}">In-House</a></li>
+                               <li><a href="{{ url_for('report.outhouse_report') }}">Out-House</a></li>
                            </ul>
                        </li>
                     </div>
