created company report

--- a/templates/company_display.html
+++ b/templates/company_display.html
@@ -3,14 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{{ url_for('static', filename = 'company_display.css') }}">
     <title>Document</title>
 </head>
 <body>
-    <h1>Company : {{ company }}</h1>
 
-    {% for internship in internships %}
+    <h3>Company : {{ company }}</h3>
 
-    {{ internship.organization }}
-    {% endfor %}
+    <table>
+        <tr>
+            <th>Student Name</th>
+            <th>Class</th>
+            <th>Internship Type</th>
+            <th>Internship Mode</th>
+            <th>Duration</th>
+            <th>Start Date</th>
+            <th>End Date</th>
+        </tr>
+        {% for d in data %}
+
+        <tr>
+            <td>{{ d["student"] }}</td>  
+            <td>{{ d["class"] }}</td>
+            <td>{{ d["type"] }}</td>
+            <td>{{ d["mode"] }}</td>
+            <td>{{ d["duration"] }}</td>
+            <td>{{ d["start date"] }}</td>
+            <td>{{ d["end date"] }}</td>
+        
+        </tr>
+        {% endfor %}
+    </table>
+
+
+
 </body>
 </html>
