report table added

--- a/templates/incharge_dashboard.html
+++ b/templates/incharge_dashboard.html
@@ -19,9 +19,6 @@
                     <li>
                         <a href="{{ url_for('report.accademic_year_report') }}">Accademic Year</a>
                     </li>
-                    <li>
-                       <a href="">Last Three Years</a>
-                    </li>
                     <div class="sub-dropdown">
                         <li >
                             <a href="" class="internship-types-nav">Internship Types</a>
@@ -38,6 +35,7 @@
                                 <li><a href="{{ url_for('report.year_end_summary_report') }}">Yearly</a></li>
                                 <li><a href="{{ url_for('report.students_report') }}">Student</a> </li>
                                 <li><a href="{{ url_for('report.company_report') }}">Company</a></li>
+                                <li><a href="{{ url_for('report.last_three_years_summary') }}">Last Three Years</a></li>
                             </ul>
                         </li>
                     </div>
